--- a/WebProject/index.html
+++ b/WebProject/index.html
@@ -46,12 +46,12 @@
             <div class="container">
                 <main class="algorithms">
                     <div class="algorithms__center">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/neural.png" alt="" class="algorithms__left"></a>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/ant.png" alt="" class="algorithms__right"></a>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/tree.png" alt="" class="algorithms__left"></a>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/clustering.png" alt="" class="algorithms__right"></a>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/gen.png" alt="" class="algorithms__left"></a>
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="img/work/astar.png" alt="" class="algorithms__right"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/neural.png" alt="" class="algorithms__left"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/ant.png" alt="" class="algorithms__right"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/tree.png" alt="" class="algorithms__left"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/clustering.png" alt="" class="algorithms__right"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/gen.png" alt="" class="algorithms__left"></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="img/work/astar.png" alt="" class="algorithms__right"></a>
                     </div>
                 </main>
             </div>
